--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,4 +21,5 @@ jobs:
         run: bun index.ts
         env:
           ENABLE_PAYMENT: false
-          BASE_URL: "https://my.8labs.id"
+          BASE_URL: ${{ env.BASE_URL }}
+          USER_TOKEN: ${{ secrets.USER_TOKEN }}
