Update workflow schedule to run daily at 6 PM and use environment variable for ENABLE_PAYMENT

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,8 +2,8 @@ name: 8labs-workflow
 
 on:
   schedule:
-    - cron: "*/5 * * * *" # every 5 minute
-    # - cron: "0 18 * * *" # every day at 1am WIB
+    # - cron: "*/5 * * * *" # every 5 minute
+    - cron: "0 18 * * *" # every day at 1am WIB
   workflow_dispatch: # manual trigger support
 
 jobs:
@@ -21,6 +21,6 @@ jobs:
       - name: Run invoice script
         run: bun index.ts
         env:
-          ENABLE_PAYMENT: false
+          ENABLE_PAYMENT: ${{ vars.ENABLE_PAYMENT }}
           BASE_URL: ${{ vars.BASE_URL }}
           USER_TOKEN: ${{ secrets.USER_TOKEN }}
