Add input for ENABLE_PAYMENT in workflow and update job to use it

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -5,6 +5,12 @@ on:
     # - cron: "*/5 * * * *" # every 5 minute
     - cron: "0 18 * * *" # every day at 1am WIB
   workflow_dispatch: # manual trigger support
+    inputs:
+      ENABLE_PAYMENT:
+        description: "Enable payment?"
+        required: false
+        default: false
+        type: boolean
 
 jobs:
   paymenter-job:
@@ -21,6 +27,6 @@ jobs:
       - name: Run invoice script
         run: bun index.ts
         env:
-          ENABLE_PAYMENT: ${{ vars.ENABLE_PAYMENT }}
+          ENABLE_PAYMENT: ${{ inputs.ENABLE_PAYMENT || vars.ENABLE_PAYMENT }}
           BASE_URL: ${{ vars.BASE_URL }}
           USER_TOKEN: ${{ secrets.USER_TOKEN }}
