--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -3,7 +3,9 @@ name: 8labs-workflow
 on:
   schedule:
     # - cron: "*/5 * * * *" # every 5 minute
-    - cron: "0 18 * * *" # every day at 1am WIB
+    - cron: "0 6 * * *" # 1 PM WIB
+    - cron: "0 12 * * *" # 7 PM WIB
+    - cron: "0 18 * * *" # 1 AM WIB (next day)
   workflow_dispatch: # manual trigger support
     inputs:
       ENABLE_PAYMENT:
