--- a/.github/workflows/keep-repo-alive.yml
+++ b/.github/workflows/keep-repo-alive.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  keep-repo-alive:
+  keep-repo-alive-job:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
