Disable cron job pay invoice

--- a/.github/workflows/pay-invoice.yml
+++ b/.github/workflows/pay-invoice.yml
@@ -3,11 +3,11 @@ name: pay-invoice
 # on a schedule or manually.
 
 on:
-  schedule:
+  # schedule:
     # - cron: "*/5 * * * *" # every 5 minute
-    - cron: "0 6 * * *" # 1 PM WIB
-    - cron: "0 12 * * *" # 7 PM WIB
-    - cron: "0 18 * * *" # 1 AM WIB (next day)
+    # - cron: "0 6 * * *" # 1 PM WIB
+    # - cron: "0 12 * * *" # 7 PM WIB
+    # - cron: "0 18 * * *" # 1 AM WIB (next day)
   workflow_dispatch: # manual trigger support
     inputs:
       ENABLE_PAYMENT:
