Disable cron job topup credit ticket

--- a/.github/workflows/topup-credit-ticket.yml
+++ b/.github/workflows/topup-credit-ticket.yml
@@ -3,12 +3,12 @@ name: topup-credit-ticket
 # on a schedule or manually.
 
 on:
-  schedule:
-    - cron: "0 23 * * *" # 06:00 WIB
-    - cron: "0 3 * * *" # 10:00 WIB
-    - cron: "0 7 * * *" # 14:00 WIB
-    - cron: "0 11 * * *" # 18:00 WIB
-    - cron: "0 15 * * *" # 22:00 WIB
+  # schedule:
+  #   - cron: "0 23 * * *" # 06:00 WIB
+  #   - cron: "0 3 * * *" # 10:00 WIB
+  #   - cron: "0 7 * * *" # 14:00 WIB
+  #   - cron: "0 11 * * *" # 18:00 WIB
+  #   - cron: "0 15 * * *" # 22:00 WIB
   workflow_dispatch: # manual trigger support
     inputs:
       ENABLE_CREATE_TICKET:
